// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`group topics > should failed on not found group 1`] = `
Object {
  "code": "NOT_FOUND",
  "error": "Not Found",
  "message": "group not found",
  "statusCode": 404,
}
`;

exports[`group topics > should fetch topic details 1`] = `
Object {
  "createdAt": 1680273073,
  "creator": Object {
    "avatar": Object {
      "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
      "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
      "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
    },
    "id": 287622,
    "joinedAt": 0,
    "nickname": "nickname 287622",
    "sign": "sing 287622",
    "username": "287622",
  },
  "id": 379821,
  "parent": Object {
    "createdAt": 1531631310,
    "description": "[s]非[/s]官方沙盒",
    "icon": "https://lain.bgm.tv/pic/icon/s/000/00/42/4215.jpg?r=1531631345",
    "id": 4215,
    "name": "sandbox",
    "nsfw": false,
    "title": "沙盒",
    "totalMembers": 3,
  },
  "reactions": Array [
    Object {
      "selected": false,
      "total": 2,
      "value": 54,
    },
    Object {
      "selected": false,
      "total": 2,
      "value": 68,
    },
    Object {
      "selected": false,
      "total": 1,
      "value": 92,
    },
    Object {
      "selected": false,
      "total": 1,
      "value": 122,
    },
    Object {
      "selected": false,
      "total": 1,
      "value": 128,
    },
    Object {
      "selected": false,
      "total": 2,
      "value": 132,
    },
    Object {
      "selected": false,
      "total": 1,
      "value": 137,
    },
  ],
  "replies": Array [
    Object {
      "createdAt": 1680273078,
      "creator": Object {
        "avatar": Object {
          "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
          "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
          "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
        },
        "id": 287622,
        "joinedAt": 0,
        "nickname": "nickname 287622",
        "sign": "sing 287622",
        "username": "287622",
      },
      "id": 2288669,
      "isFriend": false,
      "reactions": Array [
        Object {
          "selected": false,
          "total": 1,
          "value": 68,
        },
        Object {
          "selected": false,
          "total": 1,
          "value": 85,
        },
        Object {
          "selected": false,
          "total": 1,
          "value": 90,
        },
        Object {
          "selected": false,
          "total": 1,
          "value": 92,
        },
        Object {
          "selected": false,
          "total": 1,
          "value": 122,
        },
        Object {
          "selected": false,
          "total": 1,
          "value": 132,
        },
      ],
      "replies": Array [
        Object {
          "createdAt": 1680273085,
          "creator": Object {
            "avatar": Object {
              "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
              "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
              "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
            },
            "id": 287622,
            "joinedAt": 0,
            "nickname": "nickname 287622",
            "sign": "sing 287622",
            "username": "287622",
          },
          "id": 2288670,
          "isFriend": false,
          "reactions": Array [
            Object {
              "selected": false,
              "total": 1,
              "value": 60,
            },
            Object {
              "selected": false,
              "total": 2,
              "value": 62,
            },
            Object {
              "selected": false,
              "total": 1,
              "value": 122,
            },
            Object {
              "selected": false,
              "total": 1,
              "value": 128,
            },
            Object {
              "selected": false,
              "total": 3,
              "value": 137,
            },
          ],
          "state": 0,
          "text": "bb",
        },
      ],
      "state": 0,
      "text": "11",
    },
    Object {
      "createdAt": 1680275867,
      "creator": Object {
        "avatar": Object {
          "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
          "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
          "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
        },
        "id": 287622,
        "joinedAt": 0,
        "nickname": "nickname 287622",
        "sign": "sing 287622",
        "username": "287622",
      },
      "id": 2288733,
      "isFriend": false,
      "reactions": Array [],
      "replies": Array [],
      "state": 0,
      "text": "no reactions in this post",
    },
  ],
  "state": 0,
  "text": "t",
  "title": "reaction",
}
`;

exports[`subject topics > should failed on not found subject 1`] = `
Object {
  "code": "NOT_FOUND",
  "error": "Not Found",
  "message": "subject 114514 not found",
  "statusCode": 404,
}
`;

exports[`subject topics > should fetch topic details 1`] = `
Object {
  "createdAt": 1216022809,
  "creator": Object {
    "avatar": Object {
      "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
      "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
      "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
    },
    "id": 2,
    "joinedAt": 0,
    "nickname": "nickname 2",
    "sign": "sing 2",
    "username": "2",
  },
  "id": 3,
  "parent": Object {
    "airtime": Object {
      "date": "2008-07-17",
      "month": 7,
      "weekday": 4,
      "year": 2008,
    },
    "collection": Object {
      "1": 21,
      "2": 197,
      "3": 6,
      "4": 5,
      "5": 4,
    },
    "eps": 0,
    "id": 4,
    "images": Object {
      "common": "https://lain.bgm.tv/pic/cover/c/a8/7f/4_cMMK5.jpg",
      "grid": "https://lain.bgm.tv/pic/cover/g/a8/7f/4_cMMK5.jpg",
      "large": "https://lain.bgm.tv/pic/cover/l/a8/7f/4_cMMK5.jpg",
      "medium": "https://lain.bgm.tv/pic/cover/m/a8/7f/4_cMMK5.jpg",
      "small": "https://lain.bgm.tv/pic/cover/s/a8/7f/4_cMMK5.jpg",
    },
    "infobox": Object {
      "website": Array [
        Object {
          "v": "",
        },
      ],
      "中文名": Array [
        Object {
          "v": "合金弹头7",
        },
      ],
      "别名": Array [
        Object {
          "v": "Metal Slug 7",
        },
      ],
      "发行": Array [
        Object {
          "v": "SNKプレイモア",
        },
      ],
      "发行日期": Array [
        Object {
          "v": "2008-07-17",
        },
      ],
      "售价": Array [
        Object {
          "v": "5040円",
        },
      ],
      "平台": Array [
        Object {
          "v": "NDS",
        },
      ],
      "开发": Array [
        Object {
          "v": "SNKプレイモア",
        },
      ],
      "游戏引擎": Array [
        Object {
          "v": "",
        },
      ],
      "游戏类型": Array [
        Object {
          "v": "ACT",
        },
      ],
      "游玩人数": Array [
        Object {
          "v": "1人",
        },
      ],
    },
    "locked": false,
    "metaTags": Array [],
    "name": "メタルスラッグ7",
    "nameCN": "合金弹头7",
    "nsfw": false,
    "platform": Object {
      "alias": "",
      "id": 5,
      "type": "",
      "typeCN": "",
    },
    "rating": Object {
      "count": Array [
        0,
        0,
        0,
        1,
        8,
        47,
        43,
        39,
        3,
        2,
      ],
      "score": 6.9,
      "total": 143,
    },
    "redirect": 0,
    "series": false,
    "seriesEntry": 0,
    "summary": "　　以细腻的画风、搞笑的动作和刺激的战斗被人们所熟知的“合金弹头系列”在NDS 平台推出正统续作！虽然本系列的前几部作品最早都是作为街机游戏而推出的，不过这一次的“7”不但先推出NDS版，而且是独占！日前SNK playmore宣布了这款游戏，目前发售日定为2008年3月。据称，本作中将搭载任务模式，在关卡中不断完成教官所下达的任务，提升军衔。
　　游戏依然保持了系列一贯的风格，战斗的场面也没有因为是掌机游戏而进行削减，游戏依然是射击、跳跃和手雷三个按键，虽然是NDS游戏，不过本作却并不对应触摸屏，游戏的画面显示在上屏幕，而下屏幕则用来显示地图。在TGS 2007（Tokyo Game Show）大会上SNK放出了《合金弹头7》的试玩版。这代产品沿袭了前代风格，战斗的对象似乎也没有多大变化，没有分支路线，不过游戏性和关卡设计却不比前几代差，关卡数也有7关，另外还增加了一种武器。",
    "tags": Array [
      Object {
        "count": 52,
        "name": "NDS",
      },
      Object {
        "count": 31,
        "name": "合金弹头",
      },
      Object {
        "count": 15,
        "name": "ACT",
      },
      Object {
        "count": 15,
        "name": "SNK",
      },
      Object {
        "count": 6,
        "name": "Metal_Slug_7",
      },
      Object {
        "count": 4,
        "name": "STG",
      },
      Object {
        "count": 2,
        "name": "移植",
      },
      Object {
        "count": 2,
        "name": "诚意不足",
      },
      Object {
        "count": 2,
        "name": "RNG",
      },
      Object {
        "count": 2,
        "name": "2008",
      },
      Object {
        "count": 1,
        "name": "普通游戏",
      },
      Object {
        "count": 1,
        "name": "PC",
      },
      Object {
        "count": 1,
        "name": "未评分",
      },
      Object {
        "count": 1,
        "name": "中型",
      },
      Object {
        "count": 1,
        "name": "六星",
      },
      Object {
        "count": 1,
        "name": "动作",
      },
      Object {
        "count": 1,
        "name": "童年",
      },
      Object {
        "count": 1,
        "name": "汉化",
      },
      Object {
        "count": 1,
        "name": "横版射击",
      },
      Object {
        "count": 1,
        "name": "暴力",
      },
    ],
    "type": 4,
    "volumes": 0,
  },
  "reactions": Array [],
  "replies": Array [
    Object {
      "createdAt": 1216023735,
      "creator": Object {
        "avatar": Object {
          "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
          "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
          "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
        },
        "id": 1,
        "joinedAt": 0,
        "nickname": "nickname 1",
        "sign": "sing 1",
        "username": "1",
      },
      "id": 6,
      "isFriend": false,
      "reactions": Array [],
      "replies": Array [],
      "state": 0,
      "text": "NDS被别人借走了……",
    },
    Object {
      "createdAt": 1217552145,
      "creator": Object {
        "avatar": Object {
          "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
          "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
          "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
        },
        "id": 101,
        "joinedAt": 0,
        "nickname": "nickname 101",
        "sign": "sing 101",
        "username": "101",
      },
      "id": 38,
      "isFriend": false,
      "reactions": Array [],
      "replies": Array [],
      "state": 0,
      "text": "里层众占领了这里",
    },
  ],
  "state": 0,
  "text": "new contents 2",
  "title": "new topic title 2",
}
`;
